  efficient stack usage.
  (Nicolás Ojeda Bär, Gabriel Scherer, Alain Frisch, review by Gabriel Scherer,
  Alain Frisch and Nathanaëlle Courant)

### Standard library:
- #11883, #11884: Update documentation for In_channel and Out_channel
  with examples and sections to group related functions.
  (Kiran Gopinathan, review by Daniel Bünzli and Xavier Leroy)

- #11859: Make Stdlib.(@) and List.append tail-recursive and faster.
  (Jeremy Yallop, review by Daniel Bünzli, Anil Madhavapeddy, and Bannerets)

- #11856: Rewrite List.concat_map using TRMC, making it faster
  as well as tail-recursive.
  (Jeremy Yallop, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #11836, #11837: Add `Array.map_inplace`, `Array.mapi_inplace`,
  `Float.Array.mapi_inplace` and `Float.Array.mapi_inplace`.
  (Léo Andrès, review by Gabriel Scherer, KC Sivaramakrishnan and
  Nicolás Ojeda Bär)

- #11410: Add Set.to_list, Map.to_list, Map.of_list, Map.add_to_list,
  (Daniel Bünzli, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #11128: Add In_channel.isatty, Out_channel.isatty.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Florian Angeletti)

- #10859: Add `Format.pp_print_iter` and `Format.pp_print_array`.
  (Léo Andrès and Daniel Bünzli, review by David Allsopp and Hugo Heuzard)

- #10789: Add `Stack.drop`
  (Léo Andrès, review by Gabriel Scherer)

* #10899: Change Stdlib.nan from signaling NaN to quiet NaN.
  (Greta Yorsh, review by Xavier Leroy, Guillaume Melquiond and
  Gabriel Scherer)

- #11026, #11667, #11858: Rename the type of the accumulator
  of fold functions to 'acc:
  fold_left : ('acc -> 'a -> 'acc) -> 'acc -> 'a list -> 'acc
  fold_right : ('a -> 'acc -> 'acc) -> 'a list -> 'acc -> 'acc
  fold_left_map : ('acc -> 'a -> 'acc * 'b) -> 'acc -> 'a list -> 'acc * 'b list
  ...
  (Valentin Gatien-Baron and Francois Berenger,
  review by Gabriel Scherer and Nicolás Ojeda Bär)

- #11246: Add "hash" and "seeded_hash" functions to Bool, Int, Char, Float,